   * `return` has been implemented as a special form
   * `while` loops may now contain an `else` clause, like `for` loops
   * `xi` from `hy.extra.anaphoric` is now the `#%` tag macro
   * `#%` works on any expression and has a new `&kwargs` parameter `%**`
   * new `doc` macro and `#doc` tag macro
   * support for PEP 492 with `fn/a`, `defn/a`, `with/a` and `for/a`

   [ Bug Fixes ]
   * Numeric literals are no longer parsed as symbols when followed by a dot
     and a symbol
   * Hy now respects the environment variable PYTHONDONTWRITEBYTECODE
   * String literals should no longer be interpreted as special forms or macros
   * Tag macros (née sharp macros) whose names begin with `!` are no longer
     mistaken for shebang lines
   * Fixed a bug where REPL history wasn't saved if you quit the REPL with
     `(quit)` or `(exit)`
   * `exec` now works under Python 2
   * No TypeError from multi-arity defn returning values evaluating to None
   * try form now possible in defmacro/deftag
   * Fixed a crash when `macroexpand`ing a macro with a named import
   * Fixed a crash when `with` suppresses an exception. `with` now returns
     `None` in this case.
   * Fixed a crash when --repl-output-fn raises an exception
   * Fixed a crash when HyTypeError was raised with objects that had no
     source position
   * `assoc` now evaluates its arguments only once each
   * `break` and `continue` now raise an error when given arguments
     instead of silently ignoring them
   * Multiple expressions are now allowed in the else clause of
     a for loop
   * `else` clauses in `for` and `while` are recognized more reliably
   * Statements in the condition of a `while` loop are repeated properly
   * Argument destructuring no longer interferes with function docstrings.
   * Multiple expressions are now allowed in `try`
   * `(yield-from)` is now a syntax error

   [ Misc. Improvements ]
   * `read`, `read_str`, and `eval` are exposed and documented as top-level